--- a/feature/home/compose/src/main/res/values/strings.xml
+++ b/feature/home/compose/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="infeed_ad_2_message">Many penguins welcome you.</string>
     <string name="title_detail">Detail</string>
     <string name="no_content">No content.</string>
+    <!-- AdMob (For test)-->
+    <string name="ad_mob_banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>
 </resources>
